// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinCodeBox /> should match snapshot 1`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 20,
        "left": 20,
        "right": 20,
        "top": 20,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityLabel="pin-code-digit-0-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-0-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-1-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-1-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-2-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-2-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-3-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-3-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-4-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-4-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-5-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-5-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
  </View>
  <TextInput
    accessibilityLabel="pin-code-input-box"
    accessible={true}
    allowFontScaling={true}
    autoCorrect={false}
    blurOnSubmit={false}
    editable={true}
    enablesReturnKeyAutomatically={false}
    keyboardAppearance="dark"
    keyboardType="number-pad"
    maxLength={6}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "right": -999,
        "width": 0,
      }
    }
    testID="pin-code-input-box"
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<PinCodeBox /> should show two sovrin symbol if two digits are entered 1`] = `
<View
  style={Object {}}
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 20,
        "left": 20,
        "right": 20,
        "top": 20,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityLabel="pin-code-digit-0-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-0-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#777777",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-1-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#777777",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-1-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#777777",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-2-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-2-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-3-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-3-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-4-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-4-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="pin-code-digit-5-touchable"
      accessible={false}
      center={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": 66,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "width": 38,
        }
      }
      testID="pin-code-digit-5-touchable"
    >
      <View
        style={
          Object {
            "backgroundColor": "#EAEAEA",
            "borderRadius": 20,
            "height": 26,
            "width": 26,
          }
        }
      />
    </View>
  </View>
  <TextInput
    accessibilityLabel="pin-code-input-box"
    accessible={true}
    allowFontScaling={true}
    autoCorrect={false}
    blurOnSubmit={false}
    editable={true}
    enablesReturnKeyAutomatically={false}
    keyboardAppearance="dark"
    keyboardType="number-pad"
    maxLength={6}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "right": -999,
        "width": 0,
      }
    }
    testID="pin-code-input-box"
    underlineColorAndroid="transparent"
    value="12"
  />
</View>
`;
